--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 @import url('./css/product-card.css');
 
 * {
@@ -15,7 +14,7 @@
 .product-catalog__container {
     max-width: 1200px;
     margin: 0 auto;
-    background-image: url("img/big-photo.png");
+    background-image: url("img/dandelions.png");
     background-position-x: 60px;
     background-repeat: no-repeat;
 }
