--- a/css/product-card.css
+++ b/css/product-card.css
@@ -25,8 +25,31 @@
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.product-card:hover {
-    transform: translateY(-4px);
+.product-card,
+.product-cards-btn-style {
+    transition: background-color 0.3s ease;
+}
+
+.product-cards-btn {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-bottom: 50px;
+}
+
+.product-cards-btn-style {
+    padding: 10px 20px;
+    font-size: 14px;
+    border-radius: 8px;
+    background-color: #114e5c;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
+.bg-orange {
+    background-color: #ba4c03;
+    transition: background-color 0.3s ease;
 }
 
 .product-card__img {
@@ -64,7 +87,7 @@
 }
 
 .compound__name {
-    font-weight: 600;
+    font-weight: 400;
     display: block;
     margin-bottom: 5px;
 }
